--- a/style.css
+++ b/style.css
@@ -1,38 +1,39 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-body{
+body {
   font-family: sans-serif;
   color: #444;
   position: relative;
 }
 
-.main-header{
+.main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 60px;
 }
 
-.container{
+.container {
   width: 70%;
   margin: 0 auto;
 }
 
-.post-header{
+.post-header {
   margin-bottom: 40px;
 }
 
-nav{
+nav {
   font-size: 18px;
+  text-align: center;
 }
 
-article{
+article {
   margin-bottom: 60px;
 }
 
-aside{
+aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
@@ -40,16 +41,22 @@ aside{
   width: 500px;
 }
 
-h1, h2, h3, h4{
+h1,
+h2,
+h3,
+h4 {
   text-transform: uppercase;
   font-style: italic;
 }
 
-h1, h2, h3{
-  color: #1098ad
+h1,
+h2,
+h3 {
+  color: #1098ad;
 }
 
-p, li{
+p,
+li {
   line-height: 1.5;
 }
 
@@ -80,7 +87,8 @@ p {
   margin-bottom: 15px;
 }
 
-ul,ol{
+ul,
+ol {
   margin-left: 50px;
   margin-bottom: 20px;
 }
@@ -145,7 +153,7 @@ a:active {
   font-style: italic;
 }
 
-.post-image{
+.post-image {
   width: 100%;
   height: auto;
 }
@@ -180,7 +188,7 @@ h1::first-letter {
   margin-right: 5px;
 }
 
-h3 + p::first-line{
+h3 + p::first-line {
   /* color: red; */
 }
 
