--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .container {
@@ -31,7 +31,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 aside {
@@ -281,7 +281,8 @@ footer {
   font-style: italic;
 }
 
-.row{
+/* FLEXBX LAYOUT */
+/* .row{
   display: flex;
   gap: 75px;
   align-items: flex-start;
@@ -293,4 +294,29 @@ article {
 
 aside {
   flex: 0 0 300px;
+} */
+
+.container{
+display: grid;
+grid-template-columns: 1fr 300px;
+column-gap: 75px;
+margin-bottom: 0;
+row-gap: 60px;
+align-items: start;
+}
+
+.main-header{
+  grid-column: 1/ -1;
+}
+
+article{
+
+}
+
+aside{
+
+}
+
+footer{
+  grid-column: 1/ -1;
 }
